# auto-aaply-saas

./: .env.example  .gitignore  CLAUDE.md  migrate_from_desktop.py  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/commands/: commit-push-pr.md  deploy.md  dev.md  lint-file.md  review.md  simplify.md  verify.md
backend/: auth.py  bot_engine.py  config.py  database.py  main.py  models.py  security.py  stepstone.py
backend/api/: applications.py  auth.py  billing.py  bot.py  contact.py  dashboard.py  jobs.py  profile.py
backend/automation/: form_filler.py
backend/scrapers/: adzuna.py  arbeitnow.py  arbeitsagentur.py  base.py  dedup.py  indeed_jobspy.py  jooble.py  linkedin_guest.py  stepstone.py  xing.py
backend/workers/: apply_worker.py  scrape_worker.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  gtag.d.ts  index.css
frontend/src/__tests__/: App.test.tsx
frontend/src/components/demo/: DemoApplications.tsx  DemoBotLive.tsx  DemoDashboard.tsx  DemoProfile.tsx  DemoSidebar.tsx  DemoSignup.tsx  DemoTour.tsx  demoData.ts  useDemoTour.ts
frontend/src/components/onboarding/: OnboardingSidebar.tsx  OnboardingTour.tsx  onboardingData.ts  useOnboardingTour.ts
frontend/src/components/onboarding/steps/: StepCredentials.tsx  (+4 more)
frontend/src/pages/: Applications.tsx  Billing.tsx  BotLive.tsx  Contact.tsx  Dashboard.tsx  Debug.tsx  Discovery.tsx  Jobs.tsx  LandingPage.tsx  LinkedInSetup.tsx  Login.tsx  Profile.tsx  Settings.tsx  Support.tsx
tests/: test_health.py  test_stepstone.py
