[project]
name = "autoapply-web"
version = "0.1.0"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["backend"]
exclude = ["backend/bot_engine.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",  # line too long — handled by formatter
    "E712",  # == True is intentional for SQLAlchemy filter expressions
    "E741",  # ambiguous variable name (existing code)
    "B008",  # function call in default argument (FastAPI Depends pattern)
    "B904",  # raise from in except — too noisy for existing code
    "UP007", # use X | Y for union — keep Optional for readability
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
